---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Moved the matrix solver toggle to the subfactory info box
    - Reworded some of the mod setting names as they were awful
  Bugfixes:
    - Fixed a crash when typing into or confirming the export dialog textfield

---------------------------------------------------------------------------------------------------
Version: 1.1.17
Date: 22. 01. 2021
  Features:
    - You can now queue handcrafting machines and modules from the utility dialog
  Changes:
    - Made the utility dialog more consistent when checking whether logistic robotics are researched in modded situations
  Bugfixes:
    - Fixed a crash when changing beacon types in the beacon dialog

---------------------------------------------------------------------------------------------------
Version: 1.1.16
Date: 20. 01. 2021
  Changes:
    - Swapped the import/export button around and made their tooltips clearer
  Bugfixes:
    - Fixed a crash with fuel migration
    - Potentially fixed a crash with certain mods that add custom beacons
    - Potentially fixed a crash when deleting subfactories on a multiplayer server with high latency

---------------------------------------------------------------------------------------------------
Version: 1.1.15
Date: 04. 01. 2021
  Bugfixes:
    - Fixed an issue where the matrix solver wouldn't always show its dialog when it should have
    - Fixed that removing the last line in a subfactory with the matrix solver active would leave some top level products behind

---------------------------------------------------------------------------------------------------
Version: 1.1.14
Date: 03. 01. 2021
  Features:
    - Added an optional production column that allows you to check off a recipe line after you're done with it, in the style of a to-do list (Thanks Fiona!)