@@ -159,6 +159,9 @@ request_items_tt=Requests all the items that your inventory is missing to constr
 cancel_request=Cancel request
 request_logistics_not_researched=Robotics technology needs to be researched to enable this functionality
 request_no_items_necessary=Your inventory already contains all the necessary items to construct this __1__
+utility_no_recipes=No recipe crafts this item!
+utility_no_demand=Demand for this item already fulfilled
+utility_no_resources=No resources to craft this!
 
 # Preferences
 preferences=Preferences
