@@ -192,14 +192,20 @@ end
 
 local function handle_item_handcraft(player, tags, metadata)
     local recipes = RECIPE_MAPS["produce"][tags.type][tags.name]
-    if not recipes then return end  -- no recipes craft this item
+    if not recipes then
+        player.create_local_flying_text{text={"fp.utility_no_recipe"}, create_at_cursor=true}
+        return
+    end
 
     local desired_amount = (metadata.click == "left") and 1 or 5
     local amount_to_craft = math.min(desired_amount, tags.missing_amount)
 
-    for recipe_id, _ in pairs(recipes) do
-        if amount_to_craft == 0 then break end
+    if amount_to_craft <= 0 then
+        player.create_local_flying_text{text={"fp.utility_no_demand"}, create_at_cursor=true}
+        return
+    end
 
+    for recipe_id, _ in pairs(recipes) do
         local recipe_name = global.all_recipes.recipes[recipe_id].name
         local craftable_amount = player.get_craftable_count(recipe_name)
 
@@ -208,6 +214,8 @@ local function handle_item_handcraft(player, tags, metadata)
             player.begin_crafting{count=crafted_amount, recipe=recipe_name}
 
             amount_to_craft = amount_to_craft - crafted_amount
+        else
+            player.create_local_flying_text{text={"fp.utility_no_resources"}, create_at_cursor=true}
         end
     end
 end
